manifests/ingress-16.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "diaggarw-a132"
    labels:
        app: "diaggarw-a132"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: diaggarw4ba9-diaggarw-a132.8fd377fc1d604524b4e1.southindia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "diaggarw-a132"
                servicePort: 8080
